welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:19: error: type mismatch;
 found   : Unit
 required: Int
  while(tab(num) == 0)
  ^